<resources>
    <string name="app_name">schdl</string>
    <string name="app_moto">A faster schedule for Bakaláři. For students, by students.</string>
    <string name="start">Start</string>
    <string name="prev_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="current_week">Current week</string>
    <string name="permanent_schedule">Permanent schedule</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="bakalari_logo">Logo of Bakaláři</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="school">School</string>
    <string name="choose_school">Select</string>
    <string name="change_school">Change</string>
    <string name="no_school_selected">Not selected</string>
    <string name="login_button">Login</string>
    <string name="login_message">Log in to Bakaláři, please</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="schedule_disabled">Schedule is disabled on this school</string>
    <string name="unexpected_response">Unexpected response from server</string>
    <string name="school_unreachable">School server unreachable</string>
    <string name="unreachable">Server unreachable (check address)</string>
    <string name="no_internet">No internet connection</string>
    <string name="unknown_error">An error occurred</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="enter_school">Select your school</string>
    <string name="search">Search or enter URL address…</string>
    <string name="schools_info_connection_failed">Downloading school list failed</string>
    <string name="loading_schools_info">Loading schools info…</string>
    <string name="schools_retry">Retry</string>
    <string name="schools_dialog_title">Select a school</string>
    <string name="use_url">Enter URL address manually</string>
    <string name="use_url_dialog_title">Enter server URL address</string>
    <string name="use_url_dialog_hint">e.g.: https://bakalari.school.com/bakaweb</string>
    <string name="use_url_invalid">This is not an URL address</string>
    <string name="info_last_week">Last week</string>
    <string name="info_this_week">This week</string>
    <string name="info_next_week">Next week</string>
    <string name="info_permanent">Permanent schedule</string>
    <string name="info_offline">%1$s (offline)
    </string>
    <string name="info_unreachable">Error: connection failed
    </string>
    <string name="info_login_failed">Error: login failed</string>
    <string name="info_unexpected_response">Error: unexpected server response
    </string>
    <string name="info_app_error">Error: unknown</string>
    <string name="user">User</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="logout">Logout</string>
    <string name="switch_account">Switch account</string>
    <string name="look_and_behaviour">App look &amp; behavior</string>
    <string name="info_line">Info-line</string>
    <string name="info_line_desc">Show information line</string>
    <string name="switch_to_next_week">Switch to the next week</string>
    <string name="center_to_current_lesson">Jump to the current lesson</string>
    <string name="sticky_day_column">Sticky day column</string>
    <string name="sticky_day_column_desc">Keep day labels visible while scrolling sideways</string>
    <string name="highlight_current_day">Highlight current day</string>
    <string name="highlight_current_day_desc">Mark today\'s row in the full timetable</string>
    <string name="current_time_line">Current time line</string>
    <string name="current_time_line_desc">Draw a line through today that moves with the clock</string>
    <string name="changed_lesson_visuals">Color-code changed lessons</string>
    <string name="changed_lesson_visuals_desc">Color cells by change type (substitution, cancelled, added…)</string>
    <string name="compact_timetable">Compact timetable</string>
    <string name="compact_timetable_desc">Smaller cells so more lessons fit on screen</string>
    <string name="hide_empty_hours">Hide empty hours</string>
    <string name="hide_empty_hours_desc">Hide timetable rows or columns that contain no lessons</string>
    <string name="show_next_lesson_card">Next lesson card</string>
    <string name="show_next_lesson_card_desc">Bottom bar showing the current or upcoming lesson with countdown</string>
    <string name="show_next_lesson_countdown">Next lesson countdown</string>
    <string name="show_next_lesson_countdown_desc">Show countdown in the next lesson card</string>
    <string name="lesson_time">Time</string>
    <string name="debug_demo_mode">Demo mode</string>
    <string name="debug_demo_mode_desc">Show deterministic debug schedule data without a real account</string>
    <string name="notification">Persistent notification</string>
    <string name="notification_desc">Shows a silent notification with your next lesson</string>
    <string name="notification_detials">Persistent notification informs you about your current or next lesson during
        school. It begins to show the first lesson 1 hour before it starts and then switches to the next one always 10
        minutes before the current lesson ends. After the school finishes the notification disappears.\n\nThis feature
        can be disabled in the settings.
    </string>
    <string name="notification_no_permission_title">Notifications have been disabled</string>
    <string name="notification_no_permission">This app\'s notifications are blocked by Android. Persistent notification
        will not work until you give this app permission to post notifications in the system settings.
    </string>
    <string name="notification_off">Disabled</string>
    <string name="notification_status">Enabled for: %1$s</string>
    <string name="notification_open_settings">Customize notification…</string>
    <string name="notification_banner_text">Enable persistent notification to have quick access to the current and next lesson</string>
    <string name="notification_banner_dismiss">Dismiss</string>
    <string name="notification_banner_open">Enable</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="report">Report</string>
    <string name="float_preference_fallback_title">Enter a number</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="app_theme_screen">Theme settings</string>
    <string name="app_theme_screen_desc">Customize colors of this app</string>
    <string name="theme_general_settings">General settings</string>
    <string name="app_theme">App theme</string>
    <string name="more_themes">Get more themes</string>
    <string name="export_theme">Export theme</string>
    <string name="export_theme_desc">Generate a text containing your current theme</string>
    <string name="export_theme_detail">The following text contains all data about your current theme. Send it to your
        friends to share your amazing design skills with them!
    </string>
    <string name="import_theme">Import theme</string>
    <string name="import_theme_desc">Import theme from a text generated using the button above</string>
    <string name="import_theme_detail">Paste text generated using the \'export theme\' feature here. Get one from your
        friends or at %1$s
    </string>
    <string name="import_invalid">Invalid data. Make sure you haven\'t missed any letters at the end.</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="share">Share</string>
    <string name="share_subject">My Better Schedule theme</string>
    <string name="share_instructions">I made this amazing theme for Better Schedule! Use the link below or paste it
        (make sure you paste the whole link) into \'Better Schedule &gt; Settings &gt; Theme settings &gt; Import
        theme\' to apply this theme.
    </string>
    <string name="share_via">Share…</string>
    <string name="import_button">Import</string>
    <string name="import_clear">Clear</string>
    <string name="import_edittext_hint">Paste here</string>
    <string name="theme_custom_settings">Custom theme settings</string>
    <string name="primary_color">Primary color</string>
    <string name="primary_color_desc">App bar, buttons,…</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">Switches, checkboxes,…</string>
    <string name="background_color">Background color</string>
    <string name="cells_background">Cell fill color</string>
    <string name="cell_background">Fill</string>
    <string name="cell_primary_t">Primary text</string>
    <string name="cell_primary_t_desc">Subject and day of week abbreviations</string>
    <string name="cell_secondary_t">Secondary text</string>
    <string name="cell_secondary_t_desc">Teacher abbreviation, date, lesson begin time,…</string>
    <string name="cell_room_t">Room text</string>
    <string name="cell_room_t_desc">Classroom number</string>
    <string name="type_normal_lesson">Normal lesson</string>
    <string name="type_change">Change</string>
    <string name="type_change_desc">Lesson canceled, moved, etc.</string>
    <string name="type_no_school">No school</string>
    <string name="type_no_school_desc">School trip, museum visit, etc.</string>
    <string name="type_empty">Empty cell</string>
    <string name="type_header">Headers</string>
    <string name="type_header_desc">Day and time cells</string>
    <string name="other">Other</string>
    <string name="divider_color">Divider color</string>
    <string name="divider_width">Divider width</string>
    <string name="highlight_color">Highlight color</string>
    <string name="highlight_color_desc">Highlight of current lesson</string>
    <string name="highlight_width">Highlight width</string>
    <string name="infoline_fill">Info-line fill</string>
    <string name="infoline_fill_desc">The little text on the bottom, if enabled</string>
    <string name="infoline_text_color">Info-line text color</string>
    <string name="infoline_text_size">Info-line text size</string>
    <string name="customize_less">Customize less details</string>
    <string name="customize_less_desc">Generates some colors automatically based on provided values</string>
    <string name="customize_more">Customize more details</string>
    <string name="customize_more_desc">You choose everything</string>
    <string name="not_a_float_error">Enter a decimal number like 4.2</string>
    <string name="float_cannot_be_negative">May not be smaller than 0</string>
    <string name="homework_color">Homework dot color</string>
    <string name="homework_color_desc">Color of the little dot which marks that there is a homework for the lesson
    </string>
    <string name="homework_size">Homework dot size</string>
    <string name="lesson_teacher">Teacher:</string>
    <string name="subject_name">Subject name:</string>
    <string name="room">Room:</string>
    <string name="absence">Absence:</string>
    <string name="topic">Topic:</string>
    <string name="group">Group:</string>
    <string name="change">Change:</string>
    <string name="change_kind">Change type:</string>
</resources>